home/static/css/global/global.css
/* ... */
#app .content-holder .content h1.large {
  font-weight: bold;
  font-size: 20px;
  line-height: 22px;
  margin: 18px 0;
}

#app .content-holder .content h1 {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  margin: 16px 0;
}

#app .content-holder .content h2, .block-heading {
  font-weight: bold;
  font-size: 16px;
  line-height: 18px;
  margin: 14px 0;
}

#app .content-holder .content h3 {
  font-weight: bold;
  font-size: 14px;
  line-height: 16px;
  margin: 12px 0;
}

#app .content-holder .content h4 {
  font-weight: bold;
  font-size: 12px;
  line-height: 14px;
  margin: 10px 0;
}

.btn-primary {
  display: flex;
  margin-bottom: 8px;
  padding: 9px 12px;
  border-radius: 8px;
  text-decoration: none;
  font-weight: bold;
  font-size: 16px;
  line-height: 22px;
  letter-spacing: 0.01em;
  background: #f7f7f9;
  color: #444;
  justify-content: flex-start;
  align-items: center;
}

.btn-primary .icon-holder {
  width: 18px;
  height: 18px;
  min-width: 18px;
  display: flex;
  align-items: center;
}

.btn-primary .icon-holder img {
  max-width: 14px;
  max-height: 100%;
}

@media screen and (max-width: 767px) {
  .btn-primary {
    font-size: 14px;
  }
}

@media screen and (max-width: 359px) {
  .btn-primary {
    font-weight: normal;
    font-size: 12px;
  }
}

@media only screen and (min-width: 360px){
  .content .article__content__link-btn {
      font-size: 16px;
      line-height: 22px;
      padding: 12px 16px;
  }

  .block-heading {
    font-style: normal;
    font-weight: bold;
    font-size: 16px;
    line-height: 20px;
    margin: 16px 0;
  }

  #app .content-holder .content h1.large {
    font-weight: bold;
    font-size: 26px;
    line-height: 28px;
    margin: 24px 0;
  }

  #app .content-holder .content h1 {
    font-weight: bold;
    font-size: 24px;
    line-height: 26px;
    margin: 22px 0;
  }

  #app .content-holder .content h2, .block-heading {
    font-weight: bold;
    font-size: 22px;
    line-height: 24px;
    margin: 20px 0;
  }

  #app .content-holder .content h3 {
    font-weight: bold;
    font-size: 20px;
    line-height: 22px;
    margin: 18px 0;
  }

  #app .content-holder .content h4 {
    font-weight: bold;
    font-size: 18px;
    line-height: 20px;
    margin: 16px 0;
  }

  .btn-primary .icon-holder {
    width: 25px;
    height: 25px;
    min-width: 25px;
  }

  .btn-primary .icon-holder img {
    max-width: 16px;
  }

  .content .nav-bar__wrap {
    display: none;
  }
}

.progress-holder {
  overflow: hidden;
  margin: 0 0 20px;
}

.progress-holder .progress-title {
  display: block;
  font-size: 14px;
  line-height: 18px;
  color: #303030;
  font-weight: bold;
}

.progress-list {
  padding: 5px 0;
  margin: 0;
  list-style: none;
  overflow: hidden;
}

.progress-list li {
  float: left;
  width: 25%;
  height: 4px;
  padding: 5px 2px;
}

.progress-list li .bar {
  display: block;
  background: #E7F4F4;
  border-radius: 2px;
  height: 4px;
  width: 100%;
}

.progress-list li.completed .bar,
.progress-list li.current .bar {
  background: #1A9090;
}

.article__lead-img {
  width: auto !important;
  max-width: 86px;
  height: auto;
}

@media screen and (min-width: 576px) {
  .article__lead-img {
    max-width: 118px;
  }
}

@media screen and (min-width: 768px) {
  .article__lead-img {
    max-width: 178px;
  }
}

.article__lead-img-featured {
  width: 100%;
  height: auto;
}

.sm-paragraph {
  font-size: 0.75em !important;
  font-weight: normal !important;
  width: 100% !important;
}

.lg-paragraph {
  font-size: 0.9em !important;
  font-weight: normal !important;
  width: 100% !important;
}

#content-wrap .first-content {
    flex-direction: column-reverse;
    align-items: flex-start;
    width: 100%;
}

#content-wrap .first-content .overlay-holder {
  max-width: 320px;
  margin: 0 auto 20px;
}

#content-wrap .first-content .overlay-holder img {
  max-width: 320px;
  margin: 0;
  width: 100% !important;
}

#content-wrap .first-content .img-holder, #content-wrap .first-content .article-header {
    width: 100%;
}

/* questionnaires start */
.angle-bracket {
  min-width: 6px;
}

.survey-page__description img {
  width: 100%;
  height: auto;
}
/* questionnaires end */

